--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,51 +1,40 @@
-name: SET Daily Jobs
+name: Fetch SET Data
 
 on:
   schedule:
-    # 09:00 MMT = 02:30 UTC
-    - cron: "30 2 * * *"
-    # 12:01 MMT = 05:31 UTC
-    - cron: "31 5 * * *"
-    # 16:30 MMT = 10:00 UTC
-    - cron: "0 10 * * *"
+    - cron: "30 2 * * *"   # 09:00 MMT clear (02:30 UTC)
+    - cron: "31 5 * * *"   # 12:01 MMT (05:31 UTC)
+    - cron: "0 10 * * *"   # 16:30 MMT (09:00 UTC)
+  workflow_dispatch:
 
 jobs:
-  update-data:
+  run-scraper:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Prepare history file
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install requests beautifulsoup4 pytz
+
+      - name: Run scraper
         run: |
-          if [ ! -f set_history.json ]; then
-            echo "[]" > set_history.json
-          fi
-
-      # 09:00 MMT → Clear + insert placeholder
-      - name: Daily reset
-        if: github.event.schedule == '30 2 * * *'
-        run: |
-          echo '[{"am_time":"12:01","set":"--","value":"--"},{"pm_time":"16:30","set":"--","value":"--"}]' > set_history.json
-
-      # 12:01 or 16:30 → Replace placeholder (if still --) or append
-      - name: Fetch live data
-        if: github.event.schedule != '30 2 * * *'
-        run: |
-          curl -s https://hackingtwod.onrender.com/api/set > result.json
-
-          if jq -e '.[0].set_index == "--"' set_history.json > /dev/null; then
-            # replace first placeholder
-            jq ".[0] = $(cat result.json)" set_history.json > tmp.json && mv tmp.json set_history.json
-          else
-            # append new result
-            jq ". + [$(cat result.json)]" set_history.json > tmp.json && mv tmp.json set_history.json
+          if [ "${{ github.event.schedule }}" == "30 2 * * *" ]; then
+            python main.py clear
+          elif [ "${{ github.event.schedule }}" == "31 5 * * *" ]; then
+            python main.py fetch12
+          elif [ "${{ github.event.schedule }}" == "0 10 * * *" ]; then
+            python main.py fetch16
           fi
 
       - name: Commit changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add set_history.json
-          git commit -m "Update SET data [skip ci]" || echo "No changes"
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add ResultsHistory.json
+          git commit -m "Update SET results [skip ci]" || echo "No changes"
           git push
