--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,4 +1,24 @@
+name: Save SET Data
+
 on:
   schedule:
     - cron: "31 5 * * *"   # 12:01 MMT
     - cron: "0 10 * * *"   # 16:30 MMT
+  workflow_dispatch:
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: pip install requests beautifulsoup4 pytz
+      - name: Run script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: ${{ secrets.GITHUB_REPO }}
+        run: python main.py
