--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,24 +1,34 @@
-name: Save SET Data
+name: Schedule Record
 
 on:
   schedule:
-    - cron: "31 5 * * *"   # 12:01 MMT
-    - cron: "0 10 * * *"   # 16:30 MMT
-  workflow_dispatch:
+    # 12:01 MMT → 05:31 UTC
+    - cron: "31 5 * * *"
+    # 16:30 MMT → 10:00 UTC
+    - cron: "0 10 * * *"
 
 jobs:
-  run:
+  record:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.x"
+
       - name: Install dependencies
-        run: pip install requests beautifulsoup4 pytz
+        run: pip install pytz requests flask
+
       - name: Run script
-        env:
-          GITHUB_TOKEN: ${{ secrets.TICKET_SC }}
-          GITHUB_REPO: ${{ secrets.MY_T }}
         run: python main.py
+
+      - name: Commit changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add data.json
+          git commit -m "Auto update record"
+          git push
