--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add data.json
+          git add ResultsHistory.json
           git commit -m "Auto update record"
           git push
