--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,5 +1,14 @@
+name: Fetch SET Data
+
+on:
+  schedule:
+    - cron: "30 2 * * *"   # 09:00 MMT clear
+    - cron: "31 5 * * *"   # 12:01 MMT fetch
+    - cron: "0 10 * * *"   # 16:30 MMT fetch
+  workflow_dispatch:
+
 jobs:
-  run-flask-api:
+  fetch-set:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -9,5 +18,12 @@ jobs:
           python-version: 3.10
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run Flask script
+      - name: Run scraper
         run: python main.py
+      - name: Commit & Push
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add ResultsHistory.json
+          git commit -m "Update ResultsHistory.json"
+          git push
