--- a/.github/workflows/Pushchanges.yml
+++ b/.github/workflows/Pushchanges.yml
@@ -1,3 +1,3 @@
 - name: Push changes
-  run: git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/<twodhacker-tech
+  run: git push https://x-access-token:${{ secrets.TICKET_SC}}@github.com/<twodhacker-tech
 >/<set-scraper-api>.git
