--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,4 +1,4 @@
-name: Fetch SET Data 
+name: Fetch SET Data
 
 on:
   schedule:
@@ -25,5 +25,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add DailyResult.json HistoryResult.json
-          git commit -m "Update results"
+          git commit -m "Update results" || echo "No changes to commit"
           git push
